# infraverse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.example.yaml  pyproject.toml
.github/workflows/: test.yml
docs/plans/: 20260308-alembic-migrations.md  20260308-cli-scheduler-orchestrator.md  20260308-dry-size-converters.md  20260308-ingestion-performance.md  20260308-per-account-netbox-sync.md  20260308-refactor-batch-processing.md  20260308-repository-simplification.md  20260308-split-large-modules.md  20260308-web-session-csrf-security.md  infraverse-v0.0.1.md  infraverse-v0.0.2.md  infraverse-v0.0.3.md  multi-cloud-comparison.md  netbox-tenant-mapping.md
src/infraverse/: __main__.py  cli.py  config.py  config_file.py  scheduler.py
src/netbox_sync/: cli.py  config.py
tests/: conftest.py  test_cli.py  test_cli_config.py  test_comparison_engine.py  test_comparison_models.py  test_config.py  test_config_file.py  test_netbox_host.py  test_package.py  test_scheduler.py  test_sync_diagnostics.py
tests/clients/: test_base.py  test_netbox.py  test_vcloud.py  test_yandex.py  test_zabbix.py
tests/db/: test_alembic.py  test_models.py  test_repository.py
tests/ip/: test_classifier.py  test_utils.py
tests/providers/: test_base.py  test_netbox.py  test_netbox_infrastructure.py  test_netbox_interfaces.py  test_netbox_prefixes.py  test_netbox_tags.py  test_netbox_vms.py  test_retry.py  test_vcloud.py  test_yandex.py  test_yc_auth.py  test_zabbix.py
tests/sync/: test_batch.py  test_cleanup.py  test_config_sync.py  test_engine.py  test_exclusions.py  test_infrastructure.py  test_ingest.py  test_monitoring.py  test_orchestrator.py  test_provider_profile.py  test_providers.py  test_size_converters.py  test_vms.py  test_vms_disks.py  test_vms_networking.py  test_vms_platform.py
(+99 files in other folders)
