[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infraverse"
version = "0.0.3"
description = "Infrastructure visibility platform - multi-cloud sync, comparison, and monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "vlkuz-dev"},
]
keywords = ["infrastructure", "multi-cloud", "sync", "cmdb", "monitoring", "netbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "httpx>=0.25.0",
    "pynetbox>=7.3.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/vlkuz-dev/infraverse"
Repository = "https://github.com/vlkuz-dev/infraverse"
Issues = "https://github.com/vlkuz-dev/infraverse/issues"

[project.scripts]
infraverse = "infraverse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"infraverse.web" = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
